fix horizontal scrollbar

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -32,6 +32,8 @@ body {
 	color: rgb(var(--base));
 	font-size: 20px;
 	line-height: 1.7;
+	/* This ensures that the trick to not have layout shift when scrollbar appears to not cause a horiz scrollbar */
+	overflow-x: hidden;
 }
 main {
 	width: 720px;
